--- a/task2_music.html
+++ b/task2_music.html
@@ -91,42 +91,42 @@
         <div class="section-title">Latest Albums ...</div>
         <div class="items-grid">
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Top_Gun_Maverick_Poster.jpg" alt="Top Gun"></div>
+                <div class="item-image"><img src="./images/top_gun.jpg" alt="Top Gun"></div>
                 <div class="item-title">Top Gun: Maverick</div>
                 <div class="item-subtitle">Soundtrack</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/e/e3/Black_Panther_Wakanda_Forever_poster.jpg" alt="Black Panther"></div>
+                <div class="item-image"><img src="./images/black_panther.jpg" alt="Black Panther"></div>
                 <div class="item-title">Black Panther</div>
                 <div class="item-subtitle">Wakanda Forever</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/0/00/Spider-Man_No_Way_Home_poster.jpg" alt="Spider-Man"></div>
+                <div class="item-image"><img src="./images/spider_man.jpg" alt="Spider-Man"></div>
                 <div class="item-title">Spider-Man</div>
                 <div class="item-subtitle">No Way Home</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/4/4e/Thor_Love_and_Thunder_poster.jpeg" alt="Thor"></div>
+                <div class="item-image"><img src="./images/thor.jpeg" alt="Thor"></div>
                 <div class="item-title">Thor</div>
                 <div class="item-subtitle">Love & Thunder</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/d/d7/RRR_Poster.jpg" alt="RRR"></div>
+                <div class="item-image"><img src="./images/rrr.jpg" alt="RRR"></div>
                 <div class="item-title">RRR</div>
                 <div class="item-subtitle">Telugu Epic</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Baahubali_2_The_Conclusion_poster.jpg" alt="Baahubali 2"></div>
+                <div class="item-image"><img src="./images/baahubali2.jpg" alt="Baahubali 2"></div>
                 <div class="item-title">Baahubali 2</div>
                 <div class="item-subtitle">The Conclusion</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/9/96/Pushpa_-_The_Rise.jpg" alt="Pushpa"></div>
+                <div class="item-image"><img src="./images/pushpa.jpg" alt="Pushpa"></div>
                 <div class="item-title">Pushpa</div>
                 <div class="item-subtitle">The Rise</div>
             </div>
             <div class="item movie-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/d/d5/K.G.F_Chapter_2.jpg" alt="KGF"></div>
+                <div class="item-image"><img src="./images/kgf2.jpg" alt="KGF"></div>
                 <div class="item-title">KGF Chapter 2</div>
                 <div class="item-subtitle">Action Drama</div>
             </div>
@@ -138,52 +138,52 @@
         <div class="section-title">Top 10 Artist ...</div>
         <div class="items-grid">
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Benson_Boone_in_2022.jpg" alt="Benson Boone"></div>
+                <div class="item-image"><img src="./images/benson_boone.jpg" alt="Benson Boone"></div>
                 <div class="item-title">Benson Boone</div>
                 <div class="item-subtitle">Pop Artist</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/The_Weeknd_in_2018.png" alt="The Weeknd"></div>
+                <div class="item-image"><img src="./images/the_weeknd.png" alt="The Weeknd"></div>
                 <div class="item-title">The Weeknd</div>
                 <div class="item-subtitle">R&B Singer</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Taylor_Swift_2_-_2019_by_Glenn_Francis.jpg" alt="Taylor Swift"></div>
+                <div class="item-image"><img src="./images/taylor_swift.jpg" alt="Taylor Swift"></div>
                 <div class="item-title">Taylor Swift</div>
                 <div class="item-subtitle">Pop Icon</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/8/83/AR_Rahman_2017.jpg" alt="AR Rahman"></div>
+                <div class="item-image"><img src="./images/ar_rahman.jpg" alt="AR Rahman"></div>
                 <div class="item-title">A.R Rahman</div>
                 <div class="item-subtitle">Music Maestro</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Ilayaraja.jpg" alt="Ilaiyaraaja"></div>
+                <div class="item-image"><img src="./images/ilaiyaraaja.jpg" alt="Ilaiyaraaja"></div>
                 <div class="item-title">Ilaiyaraaja</div>
                 <div class="item-subtitle">Legendary Composer</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Anirudh_Ravichander_at_a_promo_event.jpg" alt="Anirudh"></div>
+                <div class="item-image"><img src="./images/anirudh.jpg" alt="Anirudh"></div>
                 <div class="item-title">Anirudh Ravichander</div>
                 <div class="item-subtitle">Music Director</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Ariana_Grande_Grammys_2020.png" alt="Ariana Grande"></div>
+                <div class="item-image"><img src="./images/ariana_grande.png" alt="Ariana Grande"></div>
                 <div class="item-title">Ariana Grande</div>
                 <div class="item-subtitle">Pop Superstar</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/9/97/Shawn_Mendes_2019.jpg" alt="Shawn Mendes"></div>
+                <div class="item-image"><img src="./images/shawn_mendes.jpg" alt="Shawn Mendes"></div>
                 <div class="item-title">Shawn Mendes</div>
                 <div class="item-subtitle">Singer-Songwriter</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/7/77/Imagine_Dragons_%282017%29.jpg" alt="Imagine Dragons"></div>
+                <div class="item-image"><img src="./images/imagine_dragons.jpg" alt="Imagine Dragons"></div>
                 <div class="item-title">Imagine Dragons</div>
                 <div class="item-subtitle">Rock Band</div>
             </div>
             <div class="item artist-item">
-                <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Alex_Warren_2022.jpg" alt="Alex Warren"></div>
+                <div class="item-image"><img src="./images/alex_warren.jpg" alt="Alex Warren"></div>
                 <div class="item-title">Alex Warren</div>
                 <div class="item-subtitle">Rising Star</div>
             </div>
