--- a/task2_music.html
+++ b/task2_music.html
@@ -1,194 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Dashboard</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #ffffff;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Music Dashboard</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      color: #ffffff;
+    }
 
-        .section {
-            margin: 20px;
-        }
+    .section {
+      margin: 20px;
+    }
 
-        .section-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 16px;
-            text-align: center;
-            color: #facc15;
-        }
+    .section-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 16px;
+      text-align: center;
+      color: #facc15;
+    }
 
-        .items-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 16px;
-            overflow-x: auto;
-            padding: 0 10px;
-        }
+    .items-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 16px;
+      overflow-x: auto;
+      padding: 0 10px;
+    }
 
-        .item {
-            background-color: #1e1e1e;
-            border-radius: 10px;
-            padding: 10px;
-            text-align: center;
-            transition: transform 0.2s;
-        }
+    .item {
+      background-color: #1e1e1e;
+      border-radius: 10px;
+      padding: 10px;
+      text-align: center;
+      transition: transform 0.2s;
+    }
 
-        .item:hover {
-            transform: scale(1.05);
-        }
+    .item:hover {
+      transform: scale(1.05);
+    }
 
-        .item-image {
-            width: 100%;
-            height: 180px;
-            background-color: #333;
-            border-radius: 10px;
-            margin-bottom: 10px;
-            overflow: hidden;
-        }
+    .item-image {
+      width: 100%;
+      height: 180px;
+      background-color: #333;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      overflow: hidden;
+    }
 
-        .item-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    .item-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-        .item-title {
-            font-size: 16px;
-            font-weight: bold;
-            margin-bottom: 4px;
-            color: #ffffff;
-        }
+    .item-title {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 4px;
+      color: #ffffff;
+    }
 
-        .item-subtitle {
-            font-size: 14px;
-            color: #bbbbbb;
-        }
+    .item-subtitle {
+      font-size: 14px;
+      color: #bbbbbb;
+    }
 
-        .scroll-indicator {
-            text-align: center;
-            font-size: 14px;
-            color: #888888;
-            margin-top: 8px;
-        }
+    .scroll-indicator {
+      text-align: center;
+      font-size: 14px;
+      color: #888888;
+      margin-top: 8px;
+    }
 
-        /* Style artist image circle */
-        .artist-item .item-image img {
-            border-radius: 50%;
-        }
-    </style>
+    .artist-item .item-image img {
+      border-radius: 50%;
+    }
+  </style>
 </head>
 <body>
 
-    <div class="section">
-        <div class="section-title">Latest Albums ...</div>
-        <div class="items-grid">
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/top_gun.jpg" alt="Top Gun"></div>
-                <div class="item-title">Top Gun: Maverick</div>
-                <div class="item-subtitle">Soundtrack</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/black_panther.jpg" alt="Black Panther"></div>
-                <div class="item-title">Black Panther</div>
-                <div class="item-subtitle">Wakanda Forever</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/spider_man.jpg" alt="Spider-Man"></div>
-                <div class="item-title">Spider-Man</div>
-                <div class="item-subtitle">No Way Home</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/thor.jpeg" alt="Thor"></div>
-                <div class="item-title">Thor</div>
-                <div class="item-subtitle">Love & Thunder</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/rrr.jpg" alt="RRR"></div>
-                <div class="item-title">RRR</div>
-                <div class="item-subtitle">Telugu Epic</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/baahubali2.jpg" alt="Baahubali 2"></div>
-                <div class="item-title">Baahubali 2</div>
-                <div class="item-subtitle">The Conclusion</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/pushpa.jpg" alt="Pushpa"></div>
-                <div class="item-title">Pushpa</div>
-                <div class="item-subtitle">The Rise</div>
-            </div>
-            <div class="item movie-item">
-                <div class="item-image"><img src="./images/kgf2.jpg" alt="KGF"></div>
-                <div class="item-title">KGF Chapter 2</div>
-                <div class="item-subtitle">Action Drama</div>
-            </div>
-        </div>
-        <div class="scroll-indicator">← Scroll to see more albums →</div>
+  <div class="section">
+    <div class="section-title">Latest Albums ...</div>
+    <div class="items-grid">
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/1/1e/Top_Gun_Maverick_Soundtrack.jpg" alt="Top Gun"></div>
+        <div class="item-title">Top Gun: Maverick</div>
+        <div class="item-subtitle">Soundtrack</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/e/ea/Black_Panther_Wakanda_Forever_Soundtrack.jpg" alt="Black Panther"></div>
+        <div class="item-title">Black Panther</div>
+        <div class="item-subtitle">Wakanda Forever</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/0/00/Spider-Man_No_Way_Home_poster.jpg" alt="Spider-Man"></div>
+        <div class="item-title">Spider-Man</div>
+        <div class="item-subtitle">No Way Home</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/8/88/Thor_Love_and_Thunder_poster.jpeg" alt="Thor"></div>
+        <div class="item-title">Thor</div>
+        <div class="item-subtitle">Love & Thunder</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/d/d7/RRR_Poster.jpg" alt="RRR"></div>
+        <div class="item-title">RRR</div>
+        <div class="item-subtitle">Telugu Epic</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Baahubali_the_Conclusion_poster.jpg" alt="Baahubali 2"></div>
+        <div class="item-title">Baahubali 2</div>
+        <div class="item-subtitle">The Conclusion</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/9/9b/Pushpa_-_The_Rise_%282021_film%29.jpg" alt="Pushpa"></div>
+        <div class="item-title">Pushpa</div>
+        <div class="item-subtitle">The Rise</div>
+      </div>
+      <div class="item movie-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/en/f/f5/K.G.F_Chapter_2.jpg" alt="KGF"></div>
+        <div class="item-title">KGF Chapter 2</div>
+        <div class="item-subtitle">Action Drama</div>
+      </div>
     </div>
+    <div class="scroll-indicator">← Scroll to see more albums →</div>
+  </div>
 
-    <div class="section">
-        <div class="section-title">Top 10 Artist ...</div>
-        <div class="items-grid">
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/benson_boone.jpg" alt="Benson Boone"></div>
-                <div class="item-title">Benson Boone</div>
-                <div class="item-subtitle">Pop Artist</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/the_weeknd.png" alt="The Weeknd"></div>
-                <div class="item-title">The Weeknd</div>
-                <div class="item-subtitle">R&B Singer</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/taylor_swift.jpg" alt="Taylor Swift"></div>
-                <div class="item-title">Taylor Swift</div>
-                <div class="item-subtitle">Pop Icon</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/ar_rahman.jpg" alt="AR Rahman"></div>
-                <div class="item-title">A.R Rahman</div>
-                <div class="item-subtitle">Music Maestro</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/ilaiyaraaja.jpg" alt="Ilaiyaraaja"></div>
-                <div class="item-title">Ilaiyaraaja</div>
-                <div class="item-subtitle">Legendary Composer</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/anirudh.jpg" alt="Anirudh"></div>
-                <div class="item-title">Anirudh Ravichander</div>
-                <div class="item-subtitle">Music Director</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/ariana_grande.png" alt="Ariana Grande"></div>
-                <div class="item-title">Ariana Grande</div>
-                <div class="item-subtitle">Pop Superstar</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/shawn_mendes.jpg" alt="Shawn Mendes"></div>
-                <div class="item-title">Shawn Mendes</div>
-                <div class="item-subtitle">Singer-Songwriter</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/imagine_dragons.jpg" alt="Imagine Dragons"></div>
-                <div class="item-title">Imagine Dragons</div>
-                <div class="item-subtitle">Rock Band</div>
-            </div>
-            <div class="item artist-item">
-                <div class="item-image"><img src="./images/alex_warren.jpg" alt="Alex Warren"></div>
-                <div class="item-title">Alex Warren</div>
-                <div class="item-subtitle">Rising Star</div>
-            </div>
-        </div>
+  <div class="section">
+    <div class="section-title">Top 10 Artist ...</div>
+    <div class="items-grid">
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Benson_Boone_2023.jpg" alt="Benson Boone"></div>
+        <div class="item-title">Benson Boone</div>
+        <div class="item-subtitle">Pop Artist</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/The_Weeknd_in_2018.png" alt="The Weeknd"></div>
+        <div class="item-title">The Weeknd</div>
+        <div class="item-subtitle">R&B Singer</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Taylor_Swift_Red_Tour_5%2C_2013.jpg" alt="Taylor Swift"></div>
+        <div class="item-title">Taylor Swift</div>
+        <div class="item-subtitle">Pop Icon</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/A._R._Rahman_2012.jpg" alt="AR Rahman"></div>
+        <div class="item-title">A.R Rahman</div>
+        <div class="item-subtitle">Music Maestro</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Ilaiyaraaja_2010.jpg" alt="Ilaiyaraaja"></div>
+        <div class="item-title">Ilaiyaraaja</div>
+        <div class="item-subtitle">Legendary Composer</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Anirudh_Ravichander_at_BigFM.jpg" alt="Anirudh"></div>
+        <div class="item-title">Anirudh Ravichander</div>
+        <div class="item-subtitle">Music Director</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Ariana_Grande_Grammys_2020.png" alt="Ariana Grande"></div>
+        <div class="item-title">Ariana Grande</div>
+        <div class="item-subtitle">Pop Superstar</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Shawn_Mendes_2019.png" alt="Shawn Mendes"></div>
+        <div class="item-title">Shawn Mendes</div>
+        <div class="item-subtitle">Singer-Songwriter</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Imagine_Dragons_2013.jpg" alt="Imagine Dragons"></div>
+        <div class="item-title">Imagine Dragons</div>
+        <div class="item-subtitle">Rock Band</div>
+      </div>
+      <div class="item artist-item">
+        <div class="item-image"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Alex_Warren_2021.jpg" alt="Alex Warren"></div>
+        <div class="item-title">Alex Warren</div>
+        <div class="item-subtitle">Rising Star</div>
+      </div>
     </div>
+  </div>
 
 </body>
 </html>
